[project]
name = "agentic-audio-extraction"
version = "0.1.0"
description = "Audio analysis system using ffmpeg/ffprobe + LLM agent"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]